[project]
name = "ironfence"
description = "Synchronization primitives specifically designed for use with Asyncio Coroutines, drawing inspiration from the programming language Rust."
readme = "README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "ab0142", email = "120799552+ab0142@users.noreply.github.com" },
]
keywords = [
  "synchronization",
  "primitives",
  "rust",
  "rwlock",
  "mutex",
  "asyncio",
]
# https://pypi.org/classifiers/
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Framework :: Hatch",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
"Repository" = "https://github.com/ab0142/ironfence"
dependencies = [
  "aiorwlock~=1.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black~=23.7.0",
  "isort~=5.12.0",
  "ruff~=0.0.285",
  "mypy~=1.5.1",
  "pre-commit~=3.4.0",
  # TODO: "towncrier~=23.6.0",
  # TODO: "packaging~=23.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.isort]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.mypy]
python_version = "3.8"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[tool.hatch.version]
# https://hatch.pypa.io/latest/version/#configuration
path = "src/ironfence/__meta__.py"

# TODO: tool.hatch.build
